--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ OPENAI_API_KEY=
 # Anthropic (claude-sonnet-4, claude-opus-4, claude-haiku-4)
 ANTHROPIC_API_KEY=
 
-# Google/Gemini (gemini-2.0-flash, gemini-2.5-flash, gemini-2.5-pro)
+# Google/Gemini (gemini-2.0-flash, gemini-2.5-pro, gemini-3-pro-preview)
 # Used for synthetic dataset generation
 GOOGLE_API_KEY=
 
